profile page working ui

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,8 +11,8 @@
   --text-color: #000000;
   --link-color: #1a0dab;
   --link-hover-color: #551a8b;
-  --blue1:#140b5b;
-  --blue2:#102362;
+  --Primary:#140b5b;
+  --Secondary:#102362;
   /* background-color: #e6ebff; */
   background-color:rgb(251, 252, 255);
 
